Archive2/37/a1315688a2ae5f/output
main.cpp:1:16: error: expected initializer before 'type'
 signed integer type of at least 64 bits foo = 17;
                ^
	.file	"main.cpp"
